# todoist-assistant

./: .dockerignore  .env.example  .gitignore  .style.yapf  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DASHBOARD_IMPROVEMENTS.md  Dockerfile.api  HEATMAP_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OVERVIEW_PAGE.md  README.md  SKILLS.md  activity.py  build_windows.py  chainlit.toml  compose.triton.gpu.yaml  compose.yaml  dashboard.py  demo_dashboard.py  demo_repl.py  install.bat  main.py  project_adjustment_standalone.py  pylintrc  pyproject.toml  requirements.txt  run_tests.py  test_chat_components.py  test_integration.py  test_langgraph.py  test_langgraph_simple.py  todoist_assistant.spec  verify_langgraph.py
.data/: events.json
.github/workflows/: ci.yml  docker-image.yml  macos-installer.yml  windows-installer.yml
Formula/: todoist-assistant.rb
agent/: __init__.py  graph.py  state.py
agent/tools/: repl_tool.py
config/: settings.py
configs/: README.md  automations.yaml  automations_original_backup.yaml  dashboard.yaml  templates.yaml
configs/agent_instructions/: status_update.yaml  weekly_summary.yaml
configs/langgraph/: model.yaml
core/: README.md  pyproject.toml
deploy/triton/: Dockerfile  requirements.txt
docs/: BUILDING.md  CHAT_QUICKSTART.md  CODE_LAYOUT.md  DOCKER.md  INSTALLATION.md  README.md  USAGE.md  api_refactor_audit.md  gmail_setup.md  status_update_automation_plan.md  v0.3-release-notes.md  v0.3.1-release-notes.md  windows_installer.md  windows_prereq_test_matrix.md  windows_uninstall_behavior.md
examples/: langgraph_demo.py
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  react-plotly.d.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
integrations/: integration.py  twitter.py
packaging/macos/: Info.plist  pyinstaller.spec
packaging/pyinstaller/: todoist_assistant.spec
scripts/: __init__.py  build_macos_app.sh  build_macos_dmg.sh  build_macos_pkg.sh  build_windows.py  check_explicit_any.py  check_llm_activity_prompt.py  check_versions.py  clear_local_env.py  create_task_tree.py  dashboard_stack.sh  download_models.py  get_version.py  resolve_llm_backend.py  run_make_checks.py  status.py
scripts/macos/: install_with_brew.sh
scripts/windows/: build_installer.ps1  get_version.py  sign_windows_artifacts.ps1  smoke_test_installer.ps1
tests/: COVERAGE_REPORT.md  README.md  __init__.py  conftest.py  factories.py  test_activity_automation.py  test_agent_graph.py  test_api_client.py  test_automation_entrypoint.py  test_automation_runner.py  test_check_versions.py  test_clear_local_env.py  test_cli.py  test_codex_llm.py  test_dashboard_payload.py  test_dashboard_utils.py  test_database.py  test_database_threading.py  test_dataframe_loading.py  test_db_activity.py  test_demo.py  test_gmail_automation.py  test_habit_tracker.py  test_llm_breakdown_backend.py  test_llm_breakdown_runner.py  test_llm_usage.py  test_local_llm.py  test_multiplicate_deep_expansion.py  test_multiplicate_deep_leaf_only.py  test_multiplicate_depth_sorting.py  test_multiplicate_parent_mapping.py  test_multiplicate_preserves_subtree.py  test_observer.py  test_openai_llm.py  test_plot_project_hierarchy_icicle.py  test_plot_project_hierarchy_sunburst.py  test_plot_project_hierarchy_treemap.py  test_plots.py  test_plots_periodic.py  test_repl_tool.py  (+21 more)
tests/api/: test_api_client.py  test_web_api.py  test_web_api_admin.py  test_web_api_llm_chat.py  test_web_api_runtime.py
tests/macos/: test_macos_installers.py
tests/windows/: test_windows_installer.py
todoist/: __init__.py  activity.py  cli.py  dashboard_settings.py  database.py  db_projects.py  env.py  habit_tracker.py  launcher.py  plots.py  run_observer.py  runtime_env.py  stale_tasks.py  stats.py  status_update.py  task_tree_import.py  telemetry.py  types.py  utils.py  version.py
todoist/agent/: __init__.py  chat.py  constants.py  context.py  graph.py  local_llm.py  nodes.py  prefabs.py  repl_tool.py  utils.py
ui/: __init__.py  chainlit_app.py
(+280 files in other folders)
