[project]
name = "todoist-assistant"
version = "0.1.11"
description = "Interactive Dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "joblib>=1.5.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2>=2.9.10",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.9",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "tweepy>=4.15.0",
    "typer>=0.15.3",
    "yapf>=0.43.0",
]
